nextjs/nextjs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs
  namespace: 2cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      containers:
        - name: nextjs
          image: docker.io/library/2cloud-next-js-web:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000

          volumeMounts:
            - name: uploads-storage
              mountPath: /app/public/uploads

      volumes:
        - name: uploads-storage
          persistentVolumeClaim:
            claimName: uploads-pvc
