nextjs/nextjs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs
  namespace: 2cloud
spec:
  selector:
    app: nextjs
  ports:
    - port: 80
      targetPort: 3000
  type: NodePort
