nextjs/2cloud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 2cloud-ingress
  namespace: 2cloud
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    argocd.argoproj.io/ignore-healthcheck: "true"
spec:
  ingressClassName: public

  tls:
    - hosts:
        - 2cloud.local
      secretName: 2cloud-tls

  rules:
    - host: 2cloud.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextjs
                port:
                  number: 80
